maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: '(' expected but identifier found.
    if estFaceMur(){setDirection(dirM)
       ^PledgeMaze:66: error: 'while' expected but '}' found.
  }while(!estSurBiscuit)
  ^PledgeMaze:66: error: ';' expected but 'while' found.
  }while(!estSurBiscuit)
   ^PledgeMaze:69: error: Unmatched closing brace '}' ignored here
}
^